backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: mug-backend
  namespace: mug-dev
spec:  
  selector:
    matchLabels:
      app: mug-backend
  template:
    metadata: 
      labels:
        app: mug-backend
    spec: 
      containers: 
      - name: app
        image: mugacr.azurecr.io/mug-backend:1.0.0
        imagePullPolicy: Always
