goody-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: mug-goody-consumer
  namespace: mug
spec:  
  selector:
    matchLabels:
      app: mug-goody-consumer
  template:
    metadata: 
      labels:
        app: mug-goody-consumer
    spec: 
      containers: 
      - name: app
        image: mugacr.azurecr.io/mug-goody-consumer
