producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: mug-producer
  namespace: mug
spec:  
  selector:
    matchLabels:
      app: mug-producer
  template:
    metadata: 
      labels:
        app: mug-producer
    spec: 
      containers: 
      - name: app
        image: mugacr.azurecr.io/mug-producer
