backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mug-backend-service
  namespace: mug
spec:
  selector:
    app: mug-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8001
