mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mug-mongo-service
  namespace: mug-dev
spec:
  selector:
    role: mongo
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
