producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mug-producer-service
  namespace: mug
spec:
  selector:
    app: mug-producer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8002
