mug-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: INGRESS_NAME 
  namespace: NAMESPACE 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: INGRESS_CONTROLLER_NAME 
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: POINTED_SERVICE_NAME
          servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: INGRESS_NAME 
  namespace: NAMESPACE 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: INGRESS_CONTROLLER_NAME 
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /SERVICE_SUB_PATH/?(.*) 
        backend:
          serviceName: POINTED_SERVICE_NAME 
          servicePort: 80
